correction contraste page accueil

--- a/style.css
+++ b/style.css
@@ -799,7 +799,7 @@ h4 {
 }
 
 .black-background {
-    background-color: rgb(165, 147, 99);
+    background-color: rgb(112, 102, 73);
     padding: 40px 40px 40px 40px;
 }
 
